--- a/page_src/05/index.html
+++ b/page_src/05/index.html
@@ -22,9 +22,9 @@
     <div class="container" id='loginForm' style="width:400px">
         <h2 id="title" class="form-signin-heading">Sign in</h2>
         <label for="username" class="sr-only">Email address</label>
-        <input type="email" id="username" class="form-control" placeholder="Email address" required="" autofocus="" value="xuxunxx@126.com">
+        <input type="email" id="username" class="form-control" placeholder="Email address" required="" autofocus="">
         <label for="password" class="sr-only">Password</label>
-        <input type="password" id="password" class="form-control" placeholder="Password" required="" value="152324xxfree">
+        <input type="password" id="password" class="form-control" placeholder="Password" required="" >
         <div class="checkbox">
           <label>
             <input type="checkbox" value="remember-me"> Remember me
